--- a/Drug_discovery.ipynb
+++ b/Drug_discovery.ipynb
@@ -1306,7 +1306,7 @@
    "outputs": [],
    "source": [
     "%%script echo skipping\n",
-    "df.to_csv('m2_bioactivity_data_raw.csv', index=False)"
+    "df.to_csv('datasets/m2_bioactivity_data_raw.csv', index=False)"
    ]
   },
   {
@@ -1960,7 +1960,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mmp.to_csv('mmp9_bioactivity_data_raw.csv', index=False)"
+    "mmp.to_csv('datasets/mmp9_bioactivity_data_raw.csv', index=False)"
    ]
   },
   {
@@ -2186,7 +2186,7 @@
     }
    ],
    "source": [
-    "mmp = pd.read_csv('mmp9_bioactivity_data_raw.csv')\n",
+    "mmp = pd.read_csv('datasets/mmp9_bioactivity_data_raw.csv')\n",
     "mmp.head()"
    ]
   },
@@ -3211,7 +3211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mmp_basic.to_csv('mmp_basic.csv', index=False)"
+    "mmp_basic.to_csv('datasets/mmp_basic.csv', index=False)"
    ]
   },
   {
@@ -3221,7 +3221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mmp_basic = pd.read_csv('mmp_basic.csv')"
+    "mmp_basic = pd.read_csv('datasets/mmp_basic.csv')"
    ]
   },
   {
@@ -3554,7 +3554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mmp_basic.to_csv('mmp_basic_lipinski.csv')"
+    "mmp_basic.to_csv('datasets/mmp_basic_lipinski.csv')"
    ]
   },
   {
@@ -3564,7 +3564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lipinski = pd.read_csv('mmp_basic_lipinski.csv')"
+    "lipinski = pd.read_csv('datasets/mmp_basic_lipinski.csv')"
    ]
   },
   {
@@ -4466,7 +4466,7 @@
     "\n",
     "selection = ['canonical_smiles','molecule_chembl_id']\n",
     "for_modeling = lipinski[selection]\n",
-    "for_modeling.to_csv('molecule.smi', sep='\\t', index=False, header=False)"
+    "for_modeling.to_csv('datasets/molecule.smi', sep='\\t', index=False, header=False)"
    ]
   },
   {
@@ -4489,7 +4489,7 @@
     }
    ],
    "source": [
-    "! cat molecule.smi | head -5\n"
+    "! cat datasets/molecule.smi | head -5\n"
    ]
   },
   {
@@ -4507,7 +4507,7 @@
     }
    ],
    "source": [
-    "! cat molecule.smi | wc -l\n"
+    "! cat datasets/molecule.smi | wc -l\n"
    ]
   },
   {
@@ -6942,7 +6942,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df3_X = pd.read_csv('descriptors_output.csv')"
+    "df3_X = pd.read_csv('datasets/descriptors_output.csv')"
    ]
   },
   {
@@ -9596,7 +9596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lipinski = pd.read_csv('mmp_basic_lipinski.csv')"
+    "lipinski = pd.read_csv('datasets/mmp_basic_lipinski.csv')"
    ]
   },
   {
