Updated Business Understanding

--- a/Drug_discovery.ipynb
+++ b/Drug_discovery.ipynb
@@ -39,7 +39,7 @@
    "id": "binary-customs",
    "metadata": {},
    "source": [
-    "Cancer drugs are a huge market and current treatments often have pretty horrible side effects.  More specifically targeted drugs can decrease side effects while also improving patient outcomes."
+    "Researchers working on matrix metalloproteinases are looking for new drugs that would inhibit cancer metastisis by inhibiting MMP9 activity. To increase the effectiveness of screening a small molecule library for potential candidates, they want to first use a machine learning model to identify the compounds most likely to have inhibitory activity against the MMP9 protein before doing the more expensive and time-intensive screening for activity. "
    ]
   },
   {
@@ -1941,7 +1941,7 @@
    "execution_count": 25,
    "id": "ideal-sterling",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
