--- a/Drug_discovery.ipynb
+++ b/Drug_discovery.ipynb
@@ -1026,12 +1026,12 @@
        "INH                                  4\n",
        "Kd                                   2\n",
        "Selectivity                          2\n",
-       "Kcat/Km                              1\n",
        "FC                                   1\n",
-       "DOSE                                 1\n",
+       "% Ctrl                               1\n",
        "% Inhibition of Control Values       1\n",
        "ED50                                 1\n",
-       "% Ctrl                               1\n",
+       "DOSE                                 1\n",
+       "Kcat/Km                              1\n",
        "Name: standard_type, dtype: int64"
       ]
      },
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "theoretical-butter",
    "metadata": {},
    "outputs": [
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "suburban-language",
    "metadata": {
     "scrolled": false
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "religious-destiny",
    "metadata": {},
    "outputs": [
@@ -1587,7 +1587,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "characteristic-frontier",
    "metadata": {},
    "outputs": [],
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "pharmaceutical-darwin",
    "metadata": {
     "scrolled": true
@@ -1625,7 +1625,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "sunrise-image",
    "metadata": {},
    "outputs": [
@@ -1658,6 +1658,7 @@
     "# Visualize the target class counts\n",
     "sns.countplot(mmp_basic['target'])\n",
     "plt.title('Sample Number for Target Classes')\n",
+    "#plt.savefig('images/samplenumber.png')\n",
     "plt.show()"
    ]
   },
@@ -9234,7 +9235,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# I looked up the PubChem fingerprints at\n",
     "# https://ftp.ncbi.nlm.nih.gov/pubchem/specifications/pubchem_fingerprints.txt\n",
+    "# and assigned their canonical smiles to them\n",
     "\n",
     "FP783 = 'OC1CCC(S)CC1'\n",
     "FP16 = '>=4N'   # This is not a structure- just that the molecule contains at least four Nitrogens\n",
@@ -9248,6 +9251,8 @@
     "FP704 = 'C(=O)CCCCCC'\n",
     "FP395 = 'C(O)'\n",
     "\n",
+    "# Make lists of smiles that were important for several models, \n",
+    "# and smiles that were top features for each model (minus the one that isn't a structure)\n",
     "multiple_feature_smiles = [FP695, FP335, FP301, FP514, FP698, FP704, FP395, FP645]\n",
     "num_1_feature_smiles = [FP783, FP645]\n",
     "feature_smiles = multiple_feature_smiles + num_1_feature_smiles"
@@ -9275,12 +9280,17 @@
     }
    ],
    "source": [
+    "# View the 2D structure of the important features\n",
+    "\n",
+    "# Set up the figure\n",
     "fig, axes = plt.subplots(3, 4, figsize=(15,8), sharex=True, sharey=True)\n",
     "axr = axes.ravel()\n",
+    "# Turn off the axis, so empty boxes dont' show up in the blank spots\n",
     "for ax in axr:\n",
     "    ax.set_axis_off()\n",
     "fig.tight_layout()\n",
     "\n",
+    "# Loop through the smiles and plot them\n",
     "for i, mol in enumerate(feature_smiles):\n",
     "    m = Chem.MolFromSmiles(mol)\n",
     "    AllChem.Compute2DCoords(m)\n",
@@ -9295,6 +9305,8 @@
    "id": "aging-operator",
    "metadata": {},
    "source": [
+    "The top 2 rows are structures that were important in at least 2 models, while the last row are the structures that were most important in the RandomForest (ring structure) and SVC models. There are many similar structures, all but one include a hydroxyl (OH) group or oxygen (=O). \n",
+    "\n",
     "Next, I would like to visualize some of the molecules that were correctly and incorrectly identified. "
    ]
   },
@@ -9646,7 +9658,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "entire-moral",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -9664,6 +9678,14 @@
    "source": [
     "# View 9 molecules from the false positive dataframe\n",
     "ut.view_molecules(false_pos, di, 9, title=\"Inactive Compounds, Predicted Active\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "exempt-quantum",
+   "metadata": {},
+   "source": [
+    "Many of the structures that were important for the models' predictions are evident in these structures. With only a small sample of each group, it is impossible to say that the number of times the structures appear in each group mean anything. I could go back to the datasets and look at the number of times the PubChem fingerprints show up in each group to get more accurate statistics on that."
    ]
   },
   {
@@ -9708,7 +9730,9 @@
    "cell_type": "markdown",
    "id": "bottom-think",
    "metadata": {},
-   "source": []
+   "source": [
+    "The final model gets approximately 84% of its predictions correct. Running small molecule libraries through this model before screening them in vitro will greatly increase the percentage of active molecules that are screened. This will cut down the time and cost required to find potential new cancer treatments that will inhibit MMP9 activity and impede metastasis. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -9722,7 +9746,15 @@
    "cell_type": "markdown",
    "id": "capable-quantity",
    "metadata": {},
-   "source": []
+   "source": [
+    "Because the model does miss some of the active compounds, it could be useful to set the probabilty threshold active predictions lower if it can be done without greatly increasing number of false negatives. I would first look at at the prediction probabilities and to see if the model is more confident in its correct predictions than its incorrect predictions. \n",
+    "\n",
+    "I would also like to try dropping the intermediate category like the Data Professor did and to see if it improves the model. \n",
+    "\n",
+    "While I viewed this as a classification problem, it would be useful to know the predicted IC50 values for active compounds. This could be done by training another model that would use regression analysis to predict the IC50 value after a compound is predicted to be active. This whole project could also be done as a regression model to determine the IC50 value.\n",
+    "\n",
+    "Finally, there are 24 MMPs, some of which inhibit cancer and some that promote cancer. This has been an issue in previous attempts to use MMP inhibitors for cancer treatment; they weren't specific to the MMPs that promote cancer, so they affect both the good and bad MMPs have no net effect on the cancer progression. Thus, future drug candidates need to be specific against the MMPs that promote cancer. It would be useful to either build models for many of the MMP protiens and combine them to find compounds that will bind selectively or combine all the data into a multi-label classification problem."
+   ]
   }
  ],
  "metadata": {
